--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,20 @@
 [package]
-authors = ["rise0chen <rise0chen@163.com>"]
+authors = ["rise0chen <rise0chen@163.com>", "mbecker20 <becker.maxh@gmail.com>"]
 categories = ["rust-patterns"]
 description = "makes all the properties of a struct type an optional property"
-documentation = "https://docs.rs/partial_derive"
-edition = "2018"
+documentation = "https://docs.rs/partial_derive2"
+edition = "2021"
 keywords = ["struct", "field"]
 license = "MIT"
-name = "partial_derive"
+name = "partial_derive2"
 readme = "README.md"
-repository = "https://github.com/rise0chen/partial_derive"
-version = "0.1.0"
+repository = "https://github.com/mbecker20/partial_derive2"
+version = "0.1.1"
 
 [dependencies]
 proc-macro2 = "1.0"
 quote = "1.0"
-syn = "1.0"
+syn = "2.0"
 
 [lib]
 proc-macro = true
