--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,14 @@
 [workspace]
-members = ["make_option"]
+members = ["derive"]
 
 [workspace.package]
-version = "0.1.7"
+version = "0.1.8"
 authors = ["rise0chen <rise0chen@163.com>", "mbecker20 <becker.maxh@gmail.com>"]
 categories = ["rust-patterns"]
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/mbecker20/partial_derive2"
+description = "makes all the properties of a struct type an optional property"
 
 [package]
 name = "partial_derive2"
@@ -21,9 +22,4 @@ repository.workspace = true
 version.workspace = true
 
 [dependencies]
-proc-macro2 = "1.0"
-quote = "1.0"
-syn = "2.0"
-
-[lib]
-proc-macro = true
+# partial_derive2_derive = ""
