--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 members = ["derive", "example"]
 
 [workspace.package]
-version = "0.3.0"
+version = "0.3.1"
 authors = ["rise0chen <rise0chen@163.com>", "mbecker20 <becker.maxh@gmail.com>"]
 categories = ["rust-patterns"]
 edition = "2021"
@@ -22,4 +22,6 @@ repository.workspace = true
 version.workspace = true
 
 [dependencies]
-partial_derive2_derive = "0.3.0"
+partial_derive2_derive = "0.3.1"
+# partial_derive2_derive = { path = "derive" }
+
